# brain-render

./: .gitmodules  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: pages.yml
brain-render-backend/: Cargo.toml  builda.rs
brain-render-backend/src/: lib.rs
public/assets/: demo_300192_V1_fieldmapBOLD_001.nii
src/: App.css  App.tsx  Controls.module.scss  Controls.tsx  FileLoader.tsx  Pane.tsx  types.ts  util.ts  worker.ts
src-rust/: Cargo.toml  LICENSE_MIT
src-rust/src/: browser.rs  display_window.rs  lib.rs  nifti.rs  nifti_file_worker.rs  nifti_reader.rs  nifti_slice.rs  renderer.rs  web.rs
src-rust/src/renderer/: params.rs  texture.rs
src-rust/src/renderer/shaders/: shader.wgsl
