[package]
name = "brain-render-backend"
version = "0.1.0"
authors = ["Maxime Mulder <maxime-mulder@outlook.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(web_sys_unstable_apis)'] }

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.104"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.81", features = ["Window", "Document", "Element", "HtmlCanvasElement", "GpuCanvasContext", "Gpu", "Worker", "MessageEvent"] }
wgpu = { version = "27.0.1", features = ["web"] }
wasm-bindgen-futures = "0.4.54"
wasm-bindgen-file-reader = "1.0.0"
nifti = { version = "0.17.0", path = "forks/nifti-rs" }
js-sys = "0.3.81"
serde-wasm-bindgen = "0.6.5"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
